# velvet

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: docs.yml
docs/: Doxyfile  Doxyfile.in  mainpage.md  quickstart.md  widgets.md
examples/: ButtonEg.cpp  ButtonExample.cpp  Dashboard.cpp  DashboardEg.cpp  HelloVelvet.cpp  LabelExample.cpp  SignupExample.cpp  demo.cpp
include/velvet/: core
include/velvet/base/: HStack.hpp  VStack.hpp  Widget.hpp  Window.hpp
include/velvet/core/: Widget.hpp
include/velvet/widgets/: Button.hpp  HStack.hpp  Image.hpp  InputField.hpp  Label.hpp  Slider.hpp  Stack.hpp  VStack.hpp  widgets.hpp
src/: main.cpp
src/base/: Widget.cpp
src/core/: Widget.cpp
src/widgets/: Button.cpp  HStack.cpp  Image.cpp  InputField.cpp  Label.cpp  Slider.cpp  VStack.cpp  Widget.cpp
